public/patients/less/misc.less
body,html{
  height: 100%;
}
body{
  background: #fff;
}
h3{
  margin-top:0;
  
  span{
    font-weight: 200;
  }
}
.m-t-25{
  margin-top: 25px;
}
.m-t-10{
  margin-top: 10px!important;
}
.p-11{
  padding: 11px;
}
.m-t-0{
  margin-top:0!important;
}
.b-r{
      border-right: 1px solid #ddd;
}
.fancy-title{
  line-height: 40px;
  color: #666;
  @media(max-width:767px){
      font-size: 19px;
      line-height: 32px;
  }
}
h4{
  span{
    font-weight: 200;
  }
}
p{
  font-size: 16px;
}
.p-20{
  padding: 20px;
  @media(max-width:767px){
    padding:0 10px 0 10px;
  }
}

.bg-white{
  background: @color-white;
  .panel-default{
    margin-bottom: 0;
    box-shadow: none;
    border: initial;
    background: #fff;
    .panel-body{
      padding: 10px;
      h4{
        font-weight: 400;
      }
    }
  }
  
}
.success-text{
  i{
    width: 40px;
    height: 40px;
    margin: 0 auto;
    text-align: center;
    border: 1px solid #00AAA7;
    border-radius: 50%;
    line-height: 37px;
    margin-right: 10px;
  }
}
.panel-default{
  background: #f2f2f2;
}
.panel-green{
  border: 1px solid #DDDDDD;
    background: rgba(0, 170, 167, 0.21);
    border-radius: 4px;
}
.inline{
  display: inline;
}
.f-w-200{
  font-weight: 200!important;
}
.b-b{
    border-bottom: 1px solid #bbb!important;
}
.bg-gray{
  background:#eee;
}
.b-b-g{
  border-bottom: 1px solid #ddd;
}
.b-r-g{
  border-right: 1px solid @color-light-gray;
  @media(max-width:767px){
    border-right:0;
  }
}
.navbar.navbar-default{
      -webkit-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.31);
      -moz-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.31);
      box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.31);
   .navbar-brand{
        padding: 3px 10px;
   }
  li a .fa-bell{
    font-size: 21px;
  }
  .notification{
    position: absolute;
    width: 17px;
    height: 17px;
    background: @color-danger;
    color: @color-white;
    border-radius: 15px;
    font-size: 11px;
    text-align: center;
    top: 9px;
    right: 11px;
    line-height: 16px;
    left:23px;
    @media(max-width:767px){
      left:auto;
      width: 28px;
      height: 28px;
      line-height: 27px;
      font-size: 14px;
    }
  }
  .navbar-nav>li>.dropdown-menu{
    border: 1px solid #ddd;
    padding:0;
    li a{
      padding: 10px ;
      border-bottom: 1px solid #ddd;
    }
  }
}


.badge-round{
    width: 35px;
    height: 35px;
    border-radius: 50%;
    background: @color-danger;
    color: @color-white;
    text-align: center;
    padding-top: 8px;
    font-size: 17px;
    display: inline-block;
    position: relative;
    float:left;
    top: -6px;
    margin-right: 7px;
      &.green{
        width: 23px;
        height: 23px;
        background: @color-green-sea;
        padding-top: 0;
        top: 0;
        
        .fa-phone{
          font-size: 14px;
        }
      }
  }
  .notification-list li{
    background: transparent;
    border-bottom: 1px solid #ddd;
    padding: 15px 10px;
  }
  .question{
    font-size: 22px;
  }
h4.line-title,h3.line-title {
    position: relative;
    z-index: 1;
    text-align: center;
      &:before {
      border-top: 1px solid @color-light-gray;
      content:"";
      margin: 0 auto; 
      position: absolute;
      top: 50%; left: 0; right: 0; bottom: 0;
      width: 95%;
      z-index: -1;
      
    }

    span { 
      padding: 0 15px; 
      background: @color-white;
    }
}
.panel{
        box-shadow: 0 6px 1px rgba(0,0,0,0.07);
}
.site-wrapper{
    display: table;
    width: 100%;
    height: 100%;
    min-height: 100%;
    position: absolute;
    left: 0;
    right: 0;
    .site-wrapper-inner{
      vertical-align: middle;
          display: table-cell;
          .cover-container{
           
            margin: 0 auto;
            @media(min-width:992px){
               width: 800px;
            }
            @media(min-width:768px) and (max-width:991px){
               width: 700px;
            }
            @media(min-width:531px) and (max-width:767px){
               width: 500px;
              
               .login-info{
                padding: 0 30px 0 30px;
                  h3{
                    font-size: 27px;
                  }
               }
            }
            @media(max-width:530px){
              width: 285px!important;
              .login-info h3{
                font-size: 27px;
               }
               .btn-contact{
                margin-top:0!important;
               }
            }
            .img-bg{
              padding-right:0;
            }
      }
  }

}



.dashboard{
  @media(max-width:767px){
  button{
    width: 120px;
    padding: 3px;
  }
  h4.text-muted{
    font-size: 15px;
  }
  h1{
    font-size: 27px;
  }
  img{
    margin:0 auto;
  }
  }
  .xs-text-left{
    text-align: left;
  }
}
/*** ALERT BOX STYLING ***/
.alert{
  font-size: 17px;
  &.alert-success {
    .close{
    opacity: 10;
    background: @color-white;
    width: 21px;
    height: 21px;
    border-radius: 50%;
    span{
      color: #89C9C9;
      position: relative;
      top: -2px;
      }
    }
    .alert-numbered-list{
      div{
        width: 33px;
        height: 33px;
        color: @color-white;
        background: @color-green-sea;
        border-radius: 50%;
        text-align: center;
        display: inline-block;
        margin-right: 6px;
        position: relative;
        top: -4px;
        span{
          position: relative;
          top:4px;
        }
      }
    }
  }
  @media(max-width:767px){
    font-size: 14px;
  }
}
/* ... */

